--- a/public/main.css
+++ b/public/main.css
@@ -49,9 +49,9 @@
   --bodyFont: 'Montserrat', sans-serif;
   --smallText: 0.7em;
   /* rest */
-  --backgroundColor: var(--grey-50);
+  --backgroundColor: var(--grey-1000);
   --textColor: var(--grey-1000);
-  --borderRadius: 0.25rem;
+  --borderRadius: 1rem;
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
   --max-width: 1120px;
@@ -72,7 +72,7 @@ html {
 
 body {
   background: var(--backgroundColor);
-  color: var(--textColor);
+  color: var(--primary-50);
   font-family: var(--bodyFont);
   font-weight: 400;
   line-height: 1.75;
@@ -137,7 +137,7 @@ a {
   cursor: pointer;
   appearance: none;
   color: var(--white);
-  background: var(--primary-500);
+  background: var(--grey-900);
   border: none;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
@@ -149,7 +149,7 @@ a {
 
 .btn:hover {
   color: var(--white);
-  background: var(--primary-700);
+  background: var(--grey-1000);
   box-shadow: var(--shadow-2);
 }
 button.small {
@@ -174,7 +174,7 @@ button.block {
 *************/
 form {
   width: 100%;
-  background: var(--white);
+  background: var(--grey-1100);
   border-radius: var(--borderRadius);
   box-shadow: var(--shadow-2);
   padding: 2rem 2.5rem;
@@ -189,7 +189,7 @@ label {
 input,
 textarea {
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 0.8rem ;
   border-radius: var(--borderRadius);
   background: var(--grey-50);
   border-color: transparent;
@@ -342,7 +342,7 @@ form > :last-child {
 }
 .single-task {
   padding: 1rem 2.5rem;
-  background: var(--white);
+  background: var(--grey-1100);
   border-radius: var(--borderRadius);
   box-shadow: var(--shadow-2);
   transition: var(--transition);
@@ -391,10 +391,18 @@ form > :last-child {
   cursor: pointer;
 }
 .edit-link {
-  color: var(--green-dark);
+    background-color: var(--green-dark);
+  color: var(--primary-0);
+  padding: 0.3rem 0.5rem;
+  margin:0.1rem;
+  border-radius: 0.5rem;
 }
 .delete-btn {
-  color: var(--red-dark);
+  background-color: var(--red-dark);
+  color: var(--primary-0);
+  padding: 0.5rem;
+  margin:0.1rem;
+  border-radius: 0.5rem;
 }
 
 /*************
